# qlty-demo

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.github/daily-pool/: manifest.json
.github/daily-pool/day-001/: array.test.ts  array.ts
.github/daily-pool/day-002/: formatters.py  smells.py  test_formatters.py
.github/daily-pool/day-003/: retry.go  retry_test.go
.github/daily-pool/day-004/: formatter_spec.rb  smells.rb
.github/daily-pool/day-005/: smells.ts
.github/daily-pool/day-006/: smells.py  test_text_utils.py  text_utils.py
.github/daily-pool/day-008/: smells.rb  text_processor.rb  text_processor_spec.rb
.github/workflows/: ci.yml  daily-coverage-pr.yml  deploy-preview.yml  qlty.yml
.qlty/: qlty.toml
api/: pyproject.toml
api/api/: analytics.py  helpers.py  main.py  models.py  validators.py
api/tests/: test_analytics.py  test_main.py  test_models.py  test_validators.py
app/: biome.json  eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
app/src/__tests__/: cache.test.ts  convert.test.ts  date.test.ts  formatter.test.ts  math.test.ts  object.test.ts  string.test.ts  textStats.test.ts
app/src/utils/: cache.ts  convert.ts  date.ts  formatter.ts  math.ts  (+3 more)
scripts/: .rubocop.yml  Gemfile
scripts/lib/: deploy.rb  formatter.rb  monitoring.rb
scripts/spec/: deploy_spec.rb  monitoring_spec.rb  spec_helper.rb
worker/: go.mod  main.go
worker/processor/: internal_helpers.go  metrics.go  metrics_test.go  processor.go  processor_test.go  summary_helpers.go
worker/scheduler/: scheduler.go  scheduler_test.go
(+1 files in other folders)
