[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qlty-demo-api"
version = "0.1.0"
description = "Demo FastAPI backend for Qlty code quality tools"
requires-python = ">= 3.11"
dependencies = [
    "fastapi",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
